Modified addIssue method from service